cilium/CiliumNetworkPolicy-allow-hubblegeneratecerts-egress-kubeapiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubblegeneratecerts-egress-kubeapiserver
  namespace: kube-system
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      batch.kubernetes.io/job-name: hubble-generate-certs
